# website

./: .gitignore  LICENSE  README.md  bun.lockb
actix-api/: Cargo.toml
actix-api/src/: main.rs
actix-api/src/routes/: mod.rs  project.rs  user.rs
axum-api/: .env  Cargo.toml  database.db
axum-api/src/: database.rs  main.rs
axum-api/src/models/: mod.rs  project.rs
axum-api/src/routes/: mod.rs  project.rs
front/public/: manifest.json
front/src/: global.css  root.tsx
front/src/components/body/gauge/: index.tsx
front/src/components/body/header/: header.module.css  header.tsx
front/src/components/body/hero/: hero.module.css  hero.tsx
front/src/components/body/next-steps/: next-steps.tsx
front/src/routes/: index.tsx  layout.tsx  styles.css
front/src/routes/demo/todolist/: todolist.module.css
graph-api/: Cargo.toml
graph-api/src/: main.rs
graph-api/src/analytics/: metrics.rs
graph-api/src/models/: user.rs
graph-api/src/routes/: user.rs
restapi/: Cargo.toml  client.http  database.db  run
restapi/src/: database.rs  main.rs
restapi/src/models/: project.rs  user.rs
restapi/src/routes/: mod.rs  project.rs  user.rs
