[package]
name = "graph-api"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "1.75.0"
components = ["rustfmt", "clippy"]

[dependencies]
axum = "0.7.4"
async-graphql = "7.0.2"
async-graphql-axum = "7.0.2"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
